@@ -365,7 +365,7 @@
 			{trans("Attachment:")}
 		</TD>
 		<TD style="width: 98%;">
-			<INPUT name="file" type="file" size="60" {tip text="Enter path to file or click 'Browse' button" trigger="file"}>
+			<INPUT name="file[]" type="file" size="60" multiple {tip text="Enter path to file or click 'Browse' button" trigger="file"}>
 		</TD>
 	</TR>
 	<TR>
