@@ -9,6 +9,7 @@ version ?.??.?? (????-??-??):
   - introduced new hook which allows to attach handlers for all LMS modules
     before smarty template displaying (*_before_module_display) [chilan]
   - don't use smarty prefilter for document directory [chilan]
+  - multiple files can be send by email when we create mail message [chilan]
 
 version 1.11.18 (2015-10-01):
 
